RESOLVED FIXED302698
[blocks-in-inline] Ignore blocks in line level pagination
https://bugs.webkit.org/show_bug.cgi?id=302698
Summary [blocks-in-inline] Ignore blocks in line level pagination
Antti Koivisto
Reported 2025-11-18 00:02:20 PST
Block layout code handles the adjustments.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-18 00:50:59 PST
Antti Koivisto
Comment 2 2025-11-18 01:01:33 PST
EWS
Comment 3 2025-11-18 07:02:37 PST
Committed 303183@main (8335d774e609): <https://commits.webkit.org/303183@main> Reviewed commits have been landed. Closing PR #54096 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.