[blocks-in-inline] Ignore blocks in line level pagination https://bugs.webkit.org/show_bug.cgi?id=302698 rdar://164946941

Reviewed by Alan Baradlay.

Test: fast/inline/blocks-in-inline-multicol-block-adjust.html
* LayoutTests/fast/inline/blocks-in-inline-multicol-block-adjust-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-multicol-block-adjust.html: Added.
* Source/WebCore/layout/integration/inline/InlineIteratorBox.h:
(WebCore::InlineIterator::Box::isBlockLevelBox const):

Add inline iterator accessor to see block level boxes.

* Source/WebCore/layout/integration/inline/InlineIteratorBoxLegacyPath.h:
(WebCore::InlineIterator::BoxLegacyPath::isBlockLevelBox const):
* Source/WebCore/layout/integration/inline/InlineIteratorBoxModernPath.h:
(WebCore::InlineIterator::BoxModernPath::isBlockLevelBox const):
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::computeLineAdjustmentForPagination):

Don't adjust lines that have block level content. Block layout code handles the adjustments.

* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeLogicalHeight const):

Drive-by crash fix.

Canonical link: https://commits.webkit.org/303183@main